--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,14 @@
     package="com.sams3p10l.roomapptest">
 
     <application
-        android:name=".DatabaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomAppTest">
-        <activity android:name=".AddNewActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".acivity.AddNewActivity"></activity>
+        <activity android:name=".acivity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
